# perfaware

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
part2/: CMakeLists.txt  count_page_faults.cpp  haversine.cpp  haversine_generator.cpp  listing_0075_timed_haversine_main.cpp  move_bytes.asm  noops.asm  platform_metrics.cpp  platform_metrics.h  profile_move_bytes.cpp  profiled_haversine_main.cpp  profiler.cpp  profiler.h  repetition_tester.cpp  repetition_tester.h  time_file_read.cpp  time_front_end.cpp
part2/json/: CMakeLists.txt  json.cpp  json.h  test_json.cpp
part3/: CMakeLists.txt  cache_size.asm  cache_size_main.cpp  jump_alignment.asm  jump_alignment_main.cpp  read_ports.asm  read_ports_main.cpp  read_wide.asm  read_wide_main.cpp  write_ports.asm  write_ports_main.cpp
sim86/: CMakeLists.txt  main.cpp  printer.cpp  printer.h  sim86.cpp  simulator.cpp  simulator.h  test_printer.cpp
